module/core/former/tests/inc/former_enum_tests/unnamed_tests/compile_fail/mod.rs
// mod tuple_multi_subform_scalar_error;
// mod tuple_single_subform_non_former_error;
// mod tuple_zero_subform_scalar_error;